小貝端完成

--- a/src/src/pages/home/home.html
+++ b/src/src/pages/home/home.html
@@ -10,7 +10,7 @@
 
 <ion-content no-bounce class="no-scroll" overflow-scroll="false" background="./../assets/imgs/robelf_face1.jpg" >
   <div class="call_number">
-    <ion-col>{{num}}號</ion-col>
+    <ion-col>15號</ion-col>
   </div>
   <!--
   <img src="./../assets/imgs/robelf_face1.jpg">
